# Paladin

./: .gitignore  ARCHITECTURE  Cargo.toml  README.md  SECURITY  api.py  cli.py  config.example.toml  config.py  docker-compose.yaml  graph.py  llm.py  requirements.txt  server.py  start-demo.sh  start.sh  tools.py
DOCUMENTATION.md/: TELEMETRY_IMPLEMENTATION.md
ai/: Dockerfile  README.md  config.example.toml  config.py  graph.py  llm.py  requirements.txt  server.py  tools.py
ai/prompts/: planner.txt
api-gateway/: Dockerfile  package-lock.json  package.json
api-gateway/src/: index.js  metrices.js  telemetry.js
api-gateway/src/routes/: ai.js  index.js  pdf.js  telemetry.js
docs/: LOGS_AND_TELEMETRY_RECOMMENDATIONS.md  README.md  TELEMETRY_IMPLEMENTATION.md
docs/diagrams/: README
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/data/: mockData.ts
paladin-project/: docker-compose.yaml
paladin-project/ai/: .gitignore  llm.py  requirements.txt
paladin-project/api-gateway/: Dockerfile  package-lock.json  package.json
paladin-project/database/: init.sql
paladin-project/frontend/: package-lock.json  project_ideation.md  x
paladin-rs/: README.md
paladin-rs/src/: llm.rs  main.rs  tools.rs
prompts/: planner.txt  presenter.txt  prompts.py
services/: go.mod
services/auth-service/: package-lock.json  package.json
services/notification-service/: go.mod
services/pdf-hosting-service/: Dockerfile
src/: config.rs  main.rs
(+48 files in other folders)
