[package]
name = "paladin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1.10"
lazy_static = "1.5.0"
